--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,11 @@
 /**app.wxss**/
+page {
+  height: 100%;
+}
 .container {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  /* align-items: center; */
+  /* justify-content: space-between; */
+}
